<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/jj"
    tools:context="geoquiz.android.bignerdranch.android.qr6.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/iv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@mipmap/qx"
            />
        <EditText
            android:id="@+id/et_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:hint="@string/text_1" />
    </LinearLayout>

    <Button
        android:id="@+id/button_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:background="#00FFFF"
        android:onClick="login"
        android:text="@string/text_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sou" />

        <EditText
            android:id="@+id/query_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_3" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/QueryOne"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="40dp"
            android:background="#00CED1"
            android:onClick="queryOneData"
            android:text="@string/text_15" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fa" />

        <EditText
            android:id="@+id/et_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_26" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_3"
            android:layout_marginLeft="40dp"
            android:background="#8A2BE2"
            android:text="@string/text_27" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/ce" />

        <Button
            android:id="@+id/QueryAll"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:background="#8A2BE2"
            android:onClick="queryData"
            android:text="@string/text_16" />
    </LinearLayout>

</LinearLayout>


